do not tag self; rm role; rm user
